@@ -151,7 +151,7 @@ class RDoc::Markup::PreProcess
 
     case directive
     when 'arg', 'args' then
-      return blankline unless code_object
+      return "#{prefix}:#{directive}: #{param}\n" unless code_object
 
       code_object.params = param
 
